# multi-agent-project

./: .env.example  .gitignore  CLAUDE.md  README.md  README_EN.md  RESUME.md  claude_code_config.json  cli.py  create_s3_bucket.py  pyproject.toml  start.sh  test_aws_agent.py  test_aws_permissions.py  test_vault_kv.py
src/vault_aws_mcp/: __init__.py  config.py  server.py
src/vault_aws_mcp/agents/: __init__.py  agent_system.py  aws_agent.py  base_agent.py  github_agent.py  mcp_agent.py  orchestrator.py  vault_agent.py
src/vault_aws_mcp/services/: __init__.py  aws_session_manager.py  lease_manager.py  vault_client.py
src/vault_aws_mcp/tools/: __init__.py  base.py  ec2_tools.py  generic_tools.py  s3_tools.py
web-application/: requirements.txt  run.py
web-application/app/: __init__.py  main.py  models.py  services.py
web-application/app/static/css/: style.css
web-application/app/templates/: 404.html  base.html  car_detail.html  catalog.html  contact.html  index.html
web-application/data/: cars.csv  contacts.csv
